--- a/.github/workflows/wilco-actions.yml
+++ b/.github/workflows/wilco-actions.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           node-version: "16"
 
+      - name: Upgrade Docker CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-ce-cli
+        # ensure the client supports the daemon API
+
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
         with:
