--- a/.github/workflows/wilco-actions.yml
+++ b/.github/workflows/wilco-actions.yml
@@ -9,6 +9,17 @@ jobs:
     timeout-minutes: 10
     name: Pr checks
 
+    services:
+      mongo:
+        image: mongo:4.4
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongo --eval 'db.adminCommand(\"ping\")'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Check out project
         uses: actions/checkout@v2
@@ -17,17 +28,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16"
-
-      - name: Upgrade Docker CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-ce-cli
-        # ensure the client supports the daemon API
-
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.6.0
-        with:
-          mongodb-version: "4.4"
 
       - uses: oNaiPs/secrets-to-env-action@v1
         with:
